## Build-stabilisatie Voltooid — Permanente Fix voor Continue Build-fouten
**Oorzaken geëlimineerd:**
- **CXF 4.0.4 → 4.1.8**: lost JAXB-ContextFactory hard-ref + httpclient5 versieconflict op (bekende bugs in 4.0.x met Spring Boot 3.4)
- **Santuario 3.0.4 → 3.0.6**: bug-fixes voor Java-21 module-toegang
- **`dependencyConvergence` enforcer**: faalt de build VROEG met een heldere melding bij divergente transitive versies — nooit meer stille runtime crashes door verkeerde jar
- **Expliciete versie-pinning** `httpclient5:5.4.1`, `woodstox-core:7.1.1`, `jakarta.activation-api:2.1.3`
- **`lombok-mapstruct-binding:0.2.0`**: garandeert correcte Lombok→MapStruct volgorde op Java 21
- **`.mvn/jvm.config`**: `--add-opens` actief bij elke lokale én Docker Maven-aanroep
- **`.mvn/maven.config`** + **`maven-wrapper.properties`**: Maven 3.9.9 gepind, batch-mode

Next Action Items:
- **Auditor Service**: Bouw de `auditor-service` (poort 8083) als Spring Boot microservice die `ebms.audit.events` van RabbitMQ consumeert en opslaat — de queue heeft nog geen consumer
- **Build Verificatie**: Voer op lokale machine `docker build -f ebms-adapter/ebms-orchestrator/Dockerfile -t test-build ./ebms-adapter` uit na een `git pull` om de versie-upgrades te bevestigen
- **mTLS Offloader**: Voeg een Nginx proxy-pass toe die OIN uit het client-certificaat extraheert naar `X-Forwarded-Client-OIN` header